// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Finance 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15.872 3.172l-.743 1.856L8 2.177.872 5.028.129 3.172 8 .022l7.872 3.15zM3 6v8h2v-4h2v4h2v-4h2v4h2V6h2v8h1v2H0v-2h1V6h2z"
        fill="currentColor"
      />
      <path
        d="M8 8a2 2 0 100-4 2 2 0 000 4z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zm-2.71-2.714l.031.084A6.008 6.008 0 012.083 9h2.441c.08 1.63.35 3.12.766 4.286zM6.527 9c.077 1.434.317 2.69.647 3.613.204.571.423.962.617 1.192a.75.75 0 00.209.189.75.75 0 00.21-.19c.193-.229.412-.62.616-1.19.33-.925.57-2.18.647-3.614H6.527zm2.946-2H6.527c.077-1.435.317-2.69.647-3.613.204-.571.423-.962.617-1.192A.749.749 0 018 2.006a.749.749 0 01.21.19c.193.229.412.62.616 1.19.33.924.57 2.18.647 3.614zm2.003 2c-.08 1.63-.35 3.12-.767 4.286l-.03.084A6.008 6.008 0 0013.917 9h-2.441zm2.441-2h-2.441c-.08-1.63-.35-3.12-.767-4.286a7.54 7.54 0 00-.03-.084A6.007 6.007 0 0113.917 7zM4.524 7H2.083a6.007 6.007 0 013.238-4.37l-.03.084C4.873 3.88 4.602 5.37 4.523 7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M3 0a3 3 0 00-3 3v13h13a3 3 0 003-3V0H3zM2 3a1 1 0 011-1h11v1.586L9.803 7.783l-4-2L2 9.586V3zm0 9.414V14h11a1 1 0 001-1V6.414l-3.803 3.803-4-2L2 12.414z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12 .936L23.342 5.06l-.684 1.88L12 3.064 1.342 6.94.658 5.06 12 .936z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M4 10h2v10h2v-3h8v3h2V10h2v10h2V8h-7.17a3.001 3.001 0 00-5.66 0H2v12h2V10zm5.17 0H8v5h8v-5h-1.17a3.001 3.001 0 01-5.66 0zM11 9a1 1 0 112 0 1 1 0 01-2 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M1 21v2h22v-2H1z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12zm2.462-2.854a9.023 9.023 0 015.684-5.684c-.166.358-.316.745-.452 1.15-.32.962-.576 2.09-.752 3.33-1.24.176-2.368.432-3.33.752-.405.136-.792.286-1.15.452zm4.27.852c-.935.154-1.774.356-2.487.594-.846.282-1.46.596-1.84.896-.392.309-.405.49-.405.512 0 .023.013.203.405.512.38.3.994.614 1.84.896.713.238 1.552.44 2.486.594a30.709 30.709 0 010-4.004zm2.022 4.248A28.444 28.444 0 019.667 12c0-.777.03-1.529.087-2.246.717-.057 1.47-.087 2.246-.087.777 0 1.529.03 2.246.087.057.717.087 1.47.087 2.246 0 .777-.03 1.529-.087 2.246a28.46 28.46 0 01-2.246.087c-.777 0-1.529-.03-2.246-.087zm-1.812 1.812c-1.24-.176-2.368-.432-3.33-.752a11.131 11.131 0 01-1.15-.452 9.023 9.023 0 005.684 5.684 11.144 11.144 0 01-.452-1.15c-.32-.962-.576-2.09-.752-3.33zm2.056.21a30.739 30.739 0 004.004 0 16.381 16.381 0 01-.594 2.487c-.282.846-.596 1.46-.896 1.84-.309.392-.49.405-.512.405-.023 0-.203-.013-.512-.405-.3-.38-.614-.994-.896-1.84a16.385 16.385 0 01-.594-2.486zm4.856 4.27a9.023 9.023 0 005.684-5.684c-.358.166-.745.316-1.15.452-.962.32-2.09.576-3.33.752-.176 1.24-.432 2.368-.752 3.33-.136.405-.286.792-.452 1.15zm1.415-6.536a16.381 16.381 0 002.486-.594c.846-.282 1.46-.596 1.84-.896.392-.309.405-.49.405-.512 0-.023-.013-.203-.405-.512-.38-.3-.994-.614-1.84-.896a16.385 16.385 0 00-2.486-.594 30.739 30.739 0 010 4.004zm-.211-6.06c1.24.176 2.368.432 3.33.752.405.136.792.286 1.15.452a9.023 9.023 0 00-5.684-5.684c.166.358.316.745.452 1.15.32.962.576 2.09.752 3.33zm-2.056-.21a30.709 30.709 0 00-4.004 0c.154-.935.356-1.774.594-2.487.282-.846.596-1.46.896-1.84.309-.392.49-.405.512-.405.023 0 .203.013.512.405.3.38.614.994.896 1.84.238.713.44 1.552.594 2.486z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M4 1a3 3 0 00-3 3v19h19a3 3 0 003-3V1H4zM3 4a1 1 0 011-1h17v3.546l-7.11 6.222-5.02-3.012L3 15.206V4zm0 13.936V21h17a1 1 0 001-1V9.204l-6.89 6.028-4.98-2.988L3 17.936z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Orders24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M4.00027 4.99998C4.00028 4.44771 4.44799 4 5.00027 4H19C19.5523 4 20 4.44772 20 5V22H22V5C22 3.34315 20.6569 2 19 2H5.00027C3.34344 2 2.0003 3.34312 2.00027 4.99995L2 22L4 22L4.00027 4.99998Z"
        fill="currentColor"
      />
      <path
        d="M6 9H18V7H6V9Z"
        fill="currentColor"
      />
      <path
        d="M18 14H6V12H18V14Z"
        fill="currentColor"
      />
      <path
        d="M6 19H12V17H6V19Z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Finance 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Bank32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M30.394 8.579l-.788 1.838L16 4.586 2.394 10.417 1.606 8.58 16 2.41l14.394 6.169z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12.126 10.498a4.002 4.002 0 017.748 0H27v15h-2v-13h-2v13h-2v-3H11v3H9v-13H7v13H5v-15h7.126zm0 2H11v8h10v-8h-1.126a4.002 4.002 0 01-7.748 0zm1.874-1a2 2 0 114 0 2 2 0 01-4 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M30 27.498v2H2v-2h28z"
        fill="currentColor"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Global32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M1 16C1 7.716 7.716 1 16 1c8.284 0 15 6.716 15 15 0 8.284-6.716 15-15 15-8.284 0-15-6.716-15-15zm2.4-3.215A13.022 13.022 0 0112.786 3.4c-.393.687-.737 1.494-1.034 2.383-.465 1.398-.833 3.057-1.077 4.89-1.833.244-3.492.612-4.89 1.078-.889.296-1.696.64-2.383 1.033zm7.059-.061c-1.528.226-2.897.543-4.042.925-1.209.403-2.115.86-2.698 1.32C3.125 15.437 3 15.793 3 16c0 .207.125.563.72 1.031.582.46 1.488.917 2.697 1.32 1.145.382 2.514.698 4.042.925A42.284 42.284 0 0110.333 16c0-1.124.043-2.22.126-3.276zm2.026 6.79A39.961 39.961 0 0112.333 16c0-1.22.053-2.398.152-3.515A39.961 39.961 0 0116 12.333c1.22 0 2.398.053 3.515.152.098 1.117.152 2.296.152 3.515 0 1.22-.054 2.398-.152 3.515a39.961 39.961 0 01-3.515.152c-1.22 0-2.398-.054-3.515-.152zm-1.811 1.812c-1.833-.244-3.492-.612-4.89-1.078-.889-.296-1.696-.64-2.383-1.033a13.022 13.022 0 009.384 9.384c-.393-.687-.737-1.494-1.034-2.383-.465-1.398-.833-3.057-1.077-4.89zm2.05.215c1.055.082 2.152.126 3.276.126 1.124 0 2.22-.044 3.276-.126-.227 1.528-.543 2.896-.925 4.042-.403 1.209-.86 2.115-1.32 2.698-.468.594-.824.719-1.031.719-.207 0-.563-.125-1.031-.72-.46-.582-.917-1.488-1.32-2.697-.382-1.145-.698-2.514-.925-4.042zm6.491 7.058a13.022 13.022 0 009.384-9.384c-.687.393-1.494.737-2.383 1.034-1.398.465-3.057.833-4.89 1.077-.244 1.833-.612 3.492-1.078 4.89-.296.889-.64 1.696-1.033 2.383zm2.326-9.323c1.528-.227 2.896-.543 4.042-.925 1.209-.403 2.115-.86 2.698-1.32.594-.468.719-.824.719-1.031 0-.207-.125-.563-.72-1.031-.582-.46-1.488-.917-2.697-1.32-1.145-.382-2.514-.698-4.042-.925.082 1.055.126 2.152.126 3.276 0 1.124-.044 2.22-.126 3.276zm-.215-8.602c1.833.244 3.492.612 4.89 1.078.889.296 1.696.64 2.383 1.033A13.022 13.022 0 0019.215 3.4c.393.687.737 1.494 1.034 2.383.465 1.398.833 3.057 1.077 4.89zm-2.05-.215A42.284 42.284 0 0016 10.333c-1.124 0-2.22.043-3.276.126.226-1.528.543-2.897.925-4.042.403-1.209.86-2.115 1.32-2.698C15.437 3.125 15.793 3 16 3c.207 0 .563.125 1.031.72.46.582.917 1.488 1.32 2.697.382 1.145.698 2.514.925 4.042z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Market32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M4 1a3 3 0 00-3 3v27h27a3 3 0 003-3V1H4zM3 4a1 1 0 011-1h25v5.586l-9.094 9.094-8-6L3 20.586V4zm0 19.414V29h25a1 1 0 001-1V11.414l-8.906 8.906-8-6L3 23.414z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Orders32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M6 3C4.34315 3 3 4.34315 3 6V29H5V6C5 5.44772 5.44772 5 6 5H26C26.5523 5 27 5.44772 27 6V29H29V6C29 4.34315 27.6569 3 26 3H6Z"
        fill="currentColor"
      />
      <path
        d="M8 11H24V9H8V11Z"
        fill="currentColor"
      />
      <path
        d="M24 17H8V15H24V17Z"
        fill="currentColor"
      />
      <path
        d="M8 23H16V21H8V23Z"
        fill="currentColor"
      />
      <title>
        4
      </title>
    </svg>
  </div>
</div>
`;
